--- a/Stock_Market_Prediction_using_Linear_Regression.ipynb
+++ b/Stock_Market_Prediction_using_Linear_Regression.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "8Ba7LWXzXL4p"
       },
@@ -16,12 +16,13 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LinearRegression\n",
         "import matplotlib.pyplot as plt\n",
-        "from matplotlib import style"
+        "from matplotlib import style\n",
+        "import pickle"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -34,19 +35,19 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "         Date        Open        High         Low       Close   Adj Close  \\\n",
-            "0  2014-09-17  465.864014  468.174011  452.421997  457.334015  457.334015   \n",
-            "1  2014-09-18  456.859985  456.859985  413.104004  424.440002  424.440002   \n",
-            "2  2014-09-19  424.102997  427.834991  384.532013  394.795990  394.795990   \n",
-            "3  2014-09-20  394.673004  423.295990  389.882996  408.903992  408.903992   \n",
-            "4  2014-09-21  408.084991  412.425995  393.181000  398.821014  398.821014   \n",
+            "         Date          Open          High           Low         Close  \\\n",
+            "0  2022-07-15  20573.156250  21138.244141  20397.000000  20836.328125   \n",
+            "1  2022-07-16  20834.103516  21514.404297  20518.898438  21190.316406   \n",
+            "2  2022-07-17  21195.041016  21600.640625  20778.179688  20779.343750   \n",
+            "3  2022-07-18  20781.912109  22633.033203  20781.912109  22485.689453   \n",
+            "4  2022-07-19  22467.849609  23666.962891  21683.406250  23389.433594   \n",
             "\n",
-            "     Volume  \n",
-            "0  21056800  \n",
-            "1  34483200  \n",
-            "2  37919700  \n",
-            "3  36863600  \n",
-            "4  26580100  \n"
+            "      Adj Close       Volume  \n",
+            "0  20836.328125  25905575359  \n",
+            "1  21190.316406  24302954056  \n",
+            "2  20779.343750  22927802083  \n",
+            "3  22485.689453  39974475562  \n",
+            "4  23389.433594  48765202697  \n"
           ]
         }
       ],
@@ -58,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,20 +67,7 @@
         "id": "V609eFr1X6gq",
         "outputId": "f5d3aaf7-2054-4e12-c261-16cdda322ef9"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "<ipython-input-6-626f7051e407>:2: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df['HL_PCT'] = (df['High'] - df['Adj Close']) / df['Adj Close'] * 100\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "df = df[['Open', 'High', 'Low', 'Adj Close', 'Volume']]\n",
         "df['HL_PCT'] = (df['High'] - df['Adj Close']) / df['Adj Close'] * 100\n",
@@ -88,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "id": "qXOr2jbYYph4"
       },
@@ -99,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -112,12 +100,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Adj Close    HL_PCT  PCT_change    Volume\n",
-            "0  457.334015  2.370258   -1.831006  21056800\n",
-            "1  424.440002  7.638296   -7.096262  34483200\n",
-            "2  394.795990  8.368626   -6.910351  37919700\n",
-            "3  408.903992  3.519652    3.605767  36863600\n",
-            "4  398.821014  3.411300   -2.270110  26580100\n"
+            "      Adj Close    HL_PCT  PCT_change       Volume\n",
+            "0  20836.328125  1.448989    1.279200  25905575359\n",
+            "1  21190.316406  1.529415    1.709759  24302954056\n",
+            "2  20779.343750  3.952468   -1.961295  22927802083\n",
+            "3  22485.689453  0.655278    8.198367  39974475562\n",
+            "4  23389.433594  1.186558    4.101790  48765202697\n"
           ]
         }
       ],
@@ -127,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "id": "pYgaXplrZXVR"
       },
@@ -139,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -163,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -176,12 +164,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Adj Close    HL_PCT  PCT_change    Volume       label\n",
-            "0  457.334015  2.370258   -1.831006  21056800  424.440002\n",
-            "1  424.440002  7.638296   -7.096262  34483200  394.795990\n",
-            "2  394.795990  8.368626   -6.910351  37919700  408.903992\n",
-            "3  408.903992  3.519652    3.605767  36863600  398.821014\n",
-            "4  398.821014  3.411300   -2.270110  26580100  402.152008\n"
+            "      Adj Close    HL_PCT  PCT_change       Volume         label\n",
+            "0  20836.328125  1.448989    1.279200  25905575359  21190.316406\n",
+            "1  21190.316406  1.529415    1.709759  24302954056  20779.343750\n",
+            "2  20779.343750  3.952468   -1.961295  22927802083  22485.689453\n",
+            "3  22485.689453  0.655278    8.198367  39974475562  23389.433594\n",
+            "4  23389.433594  1.186558    4.101790  48765202697  23231.732422\n"
           ]
         }
       ],
@@ -193,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -206,7 +194,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "<ipython-input-12-7755bd0c6689>:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+            "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_8092\\1812191640.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
             "  x = np.array(df.drop(['label'],1))\n"
           ]
         }
@@ -218,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -231,15 +219,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "3219 3219\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/preprocessing/_data.py:240: UserWarning: Numerical issues were encountered when centering the data and might not be solved. Dataset may contain too large values. You may need to prescale your features.\n",
-            "  warnings.warn(\n"
+            "365 365\n"
           ]
         }
       ],
@@ -252,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 12,
       "metadata": {
         "id": "yJtjF1xKh-9h"
       },
@@ -263,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -276,20 +256,27 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.9983452544831279\n"
+            "0.9860956646297231\n"
           ]
         }
       ],
       "source": [
-        "clf = LinearRegression(n_jobs=-1)\n",
-        "clf.fit(x_train, y_train)\n",
+        "#clf = LinearRegression(n_jobs=-1)\n",
+        "#clf.fit(x_train, y_train)\n",
+        "\n",
+        "#with open('linearregression.pickel','wb') as f:\n",
+        "#    pickle.dump(clf, f)\n",
+        "\n",
+        "pickle_in = open('linearregression.pickel','rb')\n",
+        "clf = pickle.load(pickle_in)\n",
+        "\n",
         "acc = clf.score(x_test, y_test)\n",
         "print(acc)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -302,7 +289,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[30330.60503542] 0.9983452544831279 1\n"
+            "[30305.1249418] 0.9860956646297231 1\n"
           ]
         }
       ],
@@ -396,7 +383,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.10.4"
     }
   },
