--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -127,6 +127,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def squared_error(ys_orig, ys_line):\n",
+    "    return sum((ys_line - ys_orig)**2 )\n",
+    "\n",
+    "def coeff_of_determination(ys_orig, ys_line):\n",
+    "    y_mean_line = [mean(ys_orig) for y in ys_orig]\n",
+    "    sq_error_reg = squared_error(ys_orig, ys_line)\n",
+    "    sq_err_y_mean = squared_error(ys_orig, y_mean_line)\n",
+    "    return 1 - (sq_error_reg / sq_err_y_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5844155844155845\n"
+     ]
+    }
+   ],
+   "source": [
+    "r_squared = coeff_of_determination(ys, regression_line)\n",
+    "print(r_squared)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
